--- a/static/movie.html
+++ b/static/movie.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cinema</title>
+    <title>MovieFlix</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -181,7 +181,7 @@
         </div>
         <div class="m-details" style="margin-left: 50px; color: aliceblue;">
             <br>
-            <h1>Movie 1</h1>
+            <h1>MovieFlix</h1>
             <br>
             <h2 class="inline">&starf; 1.2/10 </h2>
             <p class="inline">487k votes&gt;</p>
@@ -326,8 +326,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-8 col-sm-6 col-xs-12">
-                    <p class="copyright-text">Copyright &copy; 2023 All Rights Reserved by
-                        <a href="#">CineFare</a>.
+                    <p class="copyright-text">Copyright &copy; 2024 All Rights Reserved by
+                        <a href="#">MovieFlix</a>.
                     </p>
                 </div>
                 <div class="col-md-4 col-sm-6 col-xs-12">
